--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,16 @@
     <string name="title_email_error">Email Error</string>
     <string name="message_email_error">This email address is not in the correct format</string>
 
+    <!-- Home -->
+    <string name="title_home">Home</string>
+
+    <!-- Chat -->
+    <string name="title_chat">Chat</string>
+
+    <!-- Calendar -->
+    <string name="title_calendar">Calender"</string>
+
+    <!-- Notification -->
+    <string name="title_notification">Notification"</string>
 
 </resources>
